--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: master
 <div>
     <nav class="navbar navbar-expand-lg sticky-top bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Linear Algebra</a>
+            <a class="navbar-brand" href="#">Statistical Machine Learning</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -62,6 +62,8 @@ layout: master
                         TA Classes: Sunday, 12:00-12:50, CE101 <br>
                     </p>
 
+                    This is a PhD/MS level course that covers some advanced topics in statistical machine learning including nonparametric Bayesian, point process, interpretable machine learning, theory of deep learning, and big data analytics. The students are expected to read many research papers, deliver presentations, participate in class discussions, weekly quizzes, and do a final project.
+                    
                     <br><br>
 
                     <a href="assets/materials/SML_Spring2023_Syllabus.pdf">Syllabus</a>
