--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: master
                         </small>
                     </p>
                     <p class="lead">
-                        Classes: Sunday and Tuesday, 13:30-15:00, Ibn-Sina A12 <br>
+                        Classes: Sunday and Tuesday, 13:30-15:00, CE201 <br>
                     </p>
 
                     This is a PhD/MS level course that covers some advanced topics in statistical machine learning including nonparametric Bayesian, point process, interpretable machine learning, theory of deep learning, and big data analytics. The students are expected to read many research papers, deliver presentations, participate in class discussions, weekly quizzes, and do a final project.
