--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: master
             tabindex="0">
             <div class="row">
                 <div class="col-sm-9">
-                    <h4 class="display-6">Statistical Machine Learning</h4>
+                    <h4 class="display-6">CE729: Statistical Machine Learning</h4>
                     <p class="card-text">
                         <small class="text-muted">
                             Spring 2023, Group 1;
