--- a/index.html
+++ b/index.html
@@ -61,8 +61,13 @@ layout: master
                         Classes: Sunday and Tuesday, 13:30-15:00, CE201 <br>
                     </p>
 
-                    This is a PhD/MS level course that covers some advanced topics in statistical machine learning including nonparametric Bayesian, point process, interpretable machine learning, theory of deep learning, and big data analytics. The students are expected to read many research papers, deliver presentations, participate in class discussions, weekly quizzes, and do a final project.
-                    
+                    The course is designed for Ph.D. and MS students. We will cover advanced topics in statistical
+                    machine learning, including non-parametric Bayesian methods, Gaussian Processes, Point Processes,
+                    Graphical Models, Differential Privacy, and Interpretable Machine Learning. We would also study
+                    these topics in the context of deep neural networks. Students are required to take quizzes, deliver
+                    presentations on some state-of-the-art methods, complete a course project, take the final exam, and
+                    participate actively in class discussions.
+
                     <br><br>
 
                     <a href="assets/materials/SML_Spring2023_Syllabus.pdf">Syllabus</a>
