--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ layout: master
                     </p>
                     <p class="lead">
                         Classes: Sunday and Tuesday, 13:30-15:00, CE201 <br>
+                        Farvardin 27'th class is canceled. <br>
                     </p>
 
                     The course is designed for Ph.D. and MS students. We will cover advanced topics in statistical
